레디스 추천친구조회 기능 수정 및 테스트 구현